# personal-crm

./: .env.example  .gitignore  LICENSE  README.md  metadata.yml  pyproject.toml  setup.sh
.claude/commands/: personal-crm-setup.md
.github/workflows/: test.yml
docs/superpowers/plans/: 2026-05-19-personal-network-crm.md
docs/superpowers/specs/: 2026-05-19-personal-network-crm-design.md
migrations/: 001_init.sql  002_contact_state.sql  003_contact_reveal.sql
netcrm/: _stubs.py  anthropic_client.py  classify.py  cli.py  companies.py  cost.py  db.py  fiber.py  ingest.py  mcp_server.py  normalize.py  views.py
saved_queries/: founders_in_target_industries.sql  marketing_leaders.sql  reconnect_targets.sql  sales_at_growth_companies.sql
scripts/: enrich_via_fiber_mcp.py
tests/: conftest.py  test_anthropic_client.py  test_classify.py  test_cli_smoke.py  test_companies.py  test_cost.py  test_db.py  test_fiber.py  test_ingest.py  test_normalize.py  test_saved_queries.py  test_views.py
tests/fixtures/: fiber_canned_responses.json  tiny_connections.csv
